      a message to -confirm whose To: address doesn't match VERP_CONFIRM_REGEXP
      is responded to or just logged.  It defaults to Yes which is different
      from prior behavior.  Bug #410236.

  i18n

    - Fixed a missing format character in the Spanish translation.
      Bug #670988.

  Bug Fixes and other patches

    - Fixed a typo in the usage() definition cron/gate_news.  Bug #721015.

    - Fixed an uncaught KeyError when poster tries to cancel a post which was
      already handled.  Bug #266224.

    - Held message user notifications now come From: list-owner instead of
      list-bounces.  Bug #714424.

    - Issue an HTTP 404 status for private archive file not found.

    - @listname entries in *_these_nonmembers are no longer case sensitive.
      Bug #705715.

    - Changed bin/rmlist to also remove heldmsg files for the removed list and
      fixed a problem with removal of stale locks for the list.  Bug #700528.

    - Fixed a bug where content filtering could leave a multipart message or
      part with just one sub-part. These should be recast to just the sub-part.
      Bug #701558.

    - Fixed a bug that could erroneously handle posts from addresses in
      *_these_nonmembers and send held/rejected notices to bogus addresses when
      The From or other sender header is RFC 2047 encoded.  Bug #702516.

    - Updated contrib/mm-handler-2.1.10 to better handle lists with names that
      look like admin addresses.  Bug #697161.

    - Added bounce recognition for a bogus Dovecot MDN.  Bug #693134.

    - Fixed a problem where an emailed command in the Subject: header with a
      non-ascii l10n of an 'Re:' prefix is ignored.  Bug #685261.

    - Fixed a problem with approving a post by email when the body of the
      approval mail is base64 encoded.  Bug #677115.

    - Fixed the host name in the From: address of the owner notification from
      bin/add_members.  Bug #666181.

2.1.14 (20-Sep-2010)

  Security
